--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.1",
+    "class-validator": "^0.14.1",
     "mongoose": "^8.3.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
